<?xml version="1.0" encoding="utf-8"?>
<resources>	
	<string name="app_name">Ejree</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="calories">Calories</string>
    <string name="add">Add</string>
    <string name="clear">Clear Form</string>
    <string name="menu_add_run">Add a new record</string>
    <string name="menu_show_history">Show history</string>
    <string name="menu_stats">Show Statistics</string>
    <string name="best_performance">Best performance</string>
    <string name="best_distances">Greatest distances</string>
    <string name="best_time">Longest time</string>
    <string name="best_speed">Fastest runs</string>
    <string name="date_limiters_dialog">Define periode</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="stats_title_default">Top 5 best performances</string>
    <string name="time">Time</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="periode">Periode</string>
    <string name="weekly">Wk</string>
    <string name="monthly">Mt</string>
    <string name="yearly">Yr</string>
    <string name="default_date">01/01/2014</string>
    <string name="menu_frequence">Show frequences</string>
    <string name="search">Search</string>
    <string name="runs">Runs</string>
    <string name="menu_best_performance">Best performances</string>
    <string name="table_date">Date</string>
    <string name="table_periode">Periode</string>
    <string name="table_distance">Distance</string>
    <string name="table_speed">Speed</string>
    <string name="table_time">Time</string>
    <string name="table_runs">Frq</string>
    <string name="To">To</string>
    <string name="From">From</string>
    <string name="error_on_adding">Error on adding the record</string>
    <string name="success_on_adding">Success on adding the record</string>
</resources>